--- a/p6/latihan/css/style.css
+++ b/p6/latihan/css/style.css
@@ -46,15 +46,15 @@ form .btn {
    .btn:hover {
     border-radius: 5px;
     transform: translateY(-10px);
-    box-shadow: 0 7px 0 -2px #f85959,
-     0 15px 0 -4px #39a2db,
-     0 16px 10px -3px #39a2db;
+    box-shadow: 0 7px 0 -2px #ffffff,
+     0 15px 0 -4px #000000,
+     0 16px 10px -3px #fdfeff;
    }
    
    .btn:active {
     transition: all 0.2s;
     transform: translateY(-5px);
-    box-shadow: 0 2px 0 -2px #f85959,
-     0 8px 0 -4px #39a2db,
-     0 12px 10px -3px #39a2db;
+    box-shadow: 0 2px 0 -2px #07df27be,
+     0 8px 0 -4px #0f1112,
+     0 12px 10px -3px #f0f0f0;
    }
